# client_broken

./: .tag  0001-Only-set-valid-icons-on-top-level-windows.patch  CMakeLists.txt  OWNCLOUD.cmake  README.md  config.h.in  core_theme.qrc
cmake/modules/: OCBundleResources.cmake
shell_integration/dolphin/: CMakeLists.txt  ownclouddolphinactionplugin.cpp  ownclouddolphinpluginhelper.h
shell_integration/nautilus/: syncstate.py
shell_integration/windows/: CMakeLists.txt
shell_integration/windows/FMContextMenu/: CMakeLists.txt  FMClientInterface.cpp  FMClientInterface.h  FMContextMenu.rc  FMContextMenuFactory.cpp  FMContextMenuFactory.h  FMContextMenuRegHandler.cpp  FMContextMenuRegHandler.h  dllmain.cpp
shell_integration/windows/FMOverlays/: CMakeLists.txt  DllMain.cpp  FMOverlay.cpp  FMOverlay.h  FMOverlay.rc  FMOverlayFactory.cpp  FMOverlayRegistrationHandler.cpp  FMOverlayRegistrationHandler.h  OverlayConstants.h
shell_integration/windows/FMUtil/: CMakeLists.txt  FMUtil.rc
shell_integration/windows/OCContextMenu/: dllmain.cpp
shell_integration/windows/OCOverlays/: OverlayConstants.h
shell_integration/windows/OCUtil/: CommunicationSocket.cpp
shell_integration/windows/dolphin/: ownclouddolphinpluginhelper.h
shell_integration/windows/nautilus/: setappname.sh
shell_integration/windows/windows/FMContextMenu/: FMContextMenu.cpp  FMContextMenu.h
shell_integration/windows/windows/FMOverlays/: CMakeLists.txt  FMOverlayFactory.h
shell_integration/windows/windows/FMUtil/: UtilConstants.h
src/common/: syncjournaldb.cpp
src/gui/: aboutdialog.ui  accountsettings.cpp  accountsettings.ui  (+15 more)
test/: CMakeLists.txt  testchunkingng.cpp  testdownload.cpp  testselectivesync.cpp  testsyncconflict.cpp  testsyncengine.cpp  testsyncmove.cpp  testsyncvirtualfiles.cpp  testuploadreset.cpp
(+16 files in other folders)
